--- a/serverless.yml
+++ b/serverless.yml
@@ -56,17 +56,11 @@ package:
 
 functions:
   hello:
-    handler: bin/hello
+    handler: bin/brief
     events:
       - http:
-          path: hello
-          method: get
-  world:
-    handler: bin/world
-    events:
-      - http:
-          path: world
-          method: get
+          path: brief
+          method: post
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
